tests/error/enum_errors/empty_enum_init.err
Error: Unexpected empty enum initialization (at $FILE:10:8)
   | 
 8 | @compile_guppy
 9 | def fun() -> None:
10 |     x = MyEnum()
   |         ^^^^^^ Unexpected empty enum initialization

Guppy compilation failed due to 1 previous error
